# vrender

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/app/: app.cpp  app.hpp  events.h  key_codes.h  key_events.h  vrender.cpp  vrender.h  vrender.hpp  vwindow.cpp  vwindow.h  window.cpp  window.h  window.hpp
src/app/events/: events.h  events.hpp  key_events.h  key_events.hpp  mouse_events.h  mouse_events.hpp
src/core/: buffer.cpp  buffer.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  engine.cpp  engine.hpp  framebuffer.cpp  framebuffer.h  graphics_context.cpp  graphics_context.h  graphics_context.hpp  pipeline.cpp  pipeline.h  render_system.hpp  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  swap_chain.cpp  swap_chain.h  uniform.cpp  uniform.h  vbuffer.cpp  vbuffer.h  vdescriptor_set.cpp  vdescriptor_set.h  vdevice.cpp  vdevice.h  vframebuffer.cpp  vframebuffer.h  vpipeline.cpp  vpipeline.h  vrenderer.cpp  vrenderer.h  vshader.cpp  vshader.h  vswap_chain.cpp  (+3 more)
src/core/memory/: memory_allocator.cpp  memory_allocator.h  memory_allocator.hpp
src/core/rendering/: render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp
src/core/vulkan/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp
src/ecs/: component.h  component.hpp  entity.cpp  entity.h  entity.hpp  system.cpp  system.hpp  world.cpp  world.h
src/scene/: arcball_camera.cpp  arcball_camera.h  camera.cpp  camera.h  scene.cpp  scene.h  scene.hpp
src/scene/camera/: arcball_camera.cpp  arcball_camera.hpp  camera.cpp  camera.h  camera.hpp
src/scene/model/: mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.h  model.hpp
src/shaders/: triangle.frag  triangle.vert
src/utils/: noncopyable.h  vlog.h
